// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`StudentNavbar renders when the language menu is not open 1`] = `
<StudentNavbar
  playDiagnostic={Object {}}
>
  <header
    className="nav student-nav"
  >
    <div
      className="container"
    >
      <div
        className="student-nav-section"
      >
        <a
          aria-label="Quill"
          className="student-nav-item focus-on-dark"
          href="undefined"
          tabIndex={0}
        >
          <img
            alt="Quill.org logo"
            src="undefined/images/logos/quill-logo-white-2022.svg"
          />
        </a>
      </div>
      <div
        className="header-buttons-container"
      >
        <a
          className="quill-button medium contained white focus-on-dark"
          href="undefined/profile"
        >
          Save and exit
        </a>
      </div>
    </div>
  </header>
</StudentNavbar>
`;

exports[`StudentNavbar renders when the language menu is open 1`] = `
<StudentNavbar
  playDiagnostic={
    Object {
      "languageMenuOpen": true,
    }
  }
>
  <header
    className="nav student-nav"
  >
    <div
      className="container"
    >
      <div
        className="student-nav-section"
      >
        <a
          aria-label="Quill"
          className="student-nav-item focus-on-dark"
          href="undefined"
          tabIndex={0}
        >
          <img
            alt="Quill.org logo"
            src="undefined/images/logos/quill-logo-white-2022.svg"
          />
        </a>
      </div>
      <div
        className="header-buttons-container"
      >
        <a
          className="quill-button medium contained white focus-on-dark"
          href="undefined/profile"
        >
          Save and exit
        </a>
      </div>
    </div>
  </header>
</StudentNavbar>
`;
